most of lab3 test works

--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -6,6 +6,10 @@ install: .venv/bin/python3
 	poetry config virtualenvs.in-project true
 	poetry install
 
+distclean:
+	/bin/rm -rf .venv
+	/bin/rm -f students.db
+
 .PHONY: lint
 lint: .venv/bin/python3
 	.venv/bin/python3 -m pylint student_data.py
