--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -1,85 +1,68 @@
 #
-# This is a Unix Makefile for Lab 5
+# lab5
 #
 
 ################################################################
 # Installation targets
 #
 # Create the virtual environment
-venv:
-	make venv/pyvenv.cfg
-
-venv/pyvenv.cfg:
-	echo create the virtual environment and install the requirements
-	python3 -m venv venv
-	venv/bin/python3 -m pip install --upgrade pip
-	venv/bin/python3 -m pip install -r requirements.txt
+.venv/pyvenv.cfg:
+	poetry install
 
 #
-# Install the lab5.services file
-install-lab5-service: venv/pyvenv.cfg
+# Install the lab4.services file
+install-lab5-service: .venv/pyvenv.cfg
+	poetry install
+	poetry sync
 	sudo install lab5.service /etc/systemd/system/
 	sudo systemctl daemon-reload
 	sudo systemctl enable lab5
 	sudo systemctl start lab5
-	@# Do not overwrite lab5 as it may have been customized
-	@if [ ! -r /etc/httpd/conf.d/lab5.conf ]; \
-		then echo installing /etc/httpd/conf.d/lab5.conf ; \
-		sudo install lab5.conf /etc/httpd/conf.d/ ; \
-		else echo /etc/httpd/conf.d/lab5.conf already installed ; \
-	fi
 	@echo
-	@echo Do not forget to edit ServerName in /etc/httpd/conf.d/lab5.conf, restart apache, and run certbot, and restart apache again
-	@echo You may also need to restart your web browser.
+	@echo Do not forget to edit /etc/nginx/sites-available/default
+	@echo and restart the web server
 
 ################################################################
 # Application targets
 # Run the application locally for testing
 # Note: your local machine must be authorized for your AWS account with the `aws` command.
-.PHONY: local-app
 local-app:
-	venv/bin/flask --app app run --debug
+	.venv/bin/flask --app server.main:app run --debug --port 8005 --reload
 
 # Print help for the application
-.PHONY: help
 help:
-	venv/bin/flask --app app --help
+	.venv/bin/flask --app server.main:app --help
 
 # Create a new database
 instance/server_db.sqlite:
-	venv/bin/flask --app app init-db
+	.venv/bin/flask --app server.main:app init-db
 
 # Create the s3 bucket and establish the CORS policy
-.PHONY: init-s3
 init-s3:
-	venv/bin/flask --app app init-s3
+	.venv/bin/flask --app server.main:app init-s3
 
-.PHONY: init-db
 init-db:
-	venv/bin/flask --app app init-db
+	.venv/bin/flask --app server.main:app init-db
 
 # Wipe the database and start over
-.PHONY: wipe-db
 wipe-db:
-	/bin/rm -f instance/server_db.sqlite
+	.venv/bin/flask --app server.main:app wipe-db
 	make init-db
 
 # Generate a new api-key
-.PHONY: new-apikey
 new-apikey: instance/server_db.sqlite
-	venv/bin/flask --app app new-apikey
+	.venv/bin/flask --app server.main:app new-apikey
 
 # Dump the database
-.PHONY: dump-db
 dump-db: instance/server_db.sqlite
-	venv/bin/flask --app app dump-db
+	.venv/bin/flask --app server.main:app dump-db
 
 
 #
 # Software engineering targets
 
-pylint:
-	venv/bin/python3 -m pylint app
+lint:
+	.venv/bin/python3 -m pylint app
 
 
 ################################################################
@@ -90,8 +73,8 @@ healthcheck:
 	python3 -m healthcheck.main
 
 pylint-healthcheck:
-	venv/bin/python3 -m pylint  --rcfile=healthcheck/.pylintrc healthcheck
+	.venv/bin/python3 -m pylint  --rcfile=healthcheck/.pylintrc healthcheck
 
-# make venv always run, even if it exists
-.PHONY: venv
-.PHONY: install-lab5-service
+# make .venv always run, even if it exists
+.PHONY: local-app help init-db wipe-db new-apikey dump-db lint
+.PHONY: install-lab5-service init-s3
