--- a/lab4/lab4.service
+++ b/lab4/lab4.service
@@ -8,7 +8,7 @@ User=ubuntu
 Group=ubuntu
 WorkingDirectory=/home/ubuntu/spring26/lab4
 Environment="PATH=/home/ubuntu/spring26/lab4/.venv/bin"
-ExecStart=/home/ubuntu/spring26/lab4/.venv/bin/gunicorn -w 2 -b 127.0.0.1:8004 --reload server:app
+ExecStart=/home/ubuntu/spring26/lab4/.venv/bin/gunicorn -w 2 -b 127.0.0.1:8004 --reload server.main:app
 Restart=always
 RestartSec=1
 
