--- a/lab4/pyproject.toml
+++ b/lab4/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "gunicorn (>=23.0.0,<24.0.0)",
     "tabulate (>=0.9.0,<0.10.0)",
     "click (>=8.2.1,<9.0.0)",
-    "boto3 (>=1.40.11,<2.0.0)"
+    "boto3 (>=1.40.11,<2.0.0)",
+    "tabulate"
 ]
 
 [tool.poetry]
