--- a/lab5/lab5.service
+++ b/lab5/lab5.service
@@ -8,7 +8,7 @@ User=ubuntu
 Group=ubuntu
 WorkingDirectory=/home/ubuntu/spring26/lab5
 Environment="PATH=/home/ubuntu/spring26/lab5/.venv/bin"
-ExecStart=/home/ubuntu/spring26/lab5/.venv/bin/gunicorn -w 2 -b 127.0.0.1:8005 --reload server:app
+ExecStart=/home/ubuntu/spring26/lab5/.venv/bin/gunicorn -w 2 -b 127.0.0.1:8005 --reload server.main:app
 Restart=always
 RestartSec=1
 
