--- a/etc/e11-register.service
+++ b/etc/e11-register.service
@@ -1,4 +1,5 @@
 # /etc/systemd/system/e11-register.service
+# After reboot, wait 60 seconds and then re-register. This is useful if the ip address changed.
 [Unit]
 Description=E11 register script on reboot
 After=network-online.target
@@ -7,8 +8,8 @@ Wants=network-online.target
 [Service]
 Type=oneshot
 User=ubuntu
+ExecStartPre=/bin/sleep 60
 ExecStart=/home/ubuntu/.local/bin/e11 register --quiet
-# Optional: ensure environment variables are loaded
 Environment=PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 [Install]
