--- a/lab8/pyproject.toml
+++ b/lab8/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "lab6"
+name = "lab7"
 version = "1.0.0"
-description = "Lab 6 Circuit Python and ESP32 tools"
+description = "Lab 7 server"
 authors = [
     {name = "Simson Garfinkel",email = "simsong@acm.org"}
 ]
