fixed lab2 lint error

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-.DS_Store
-csci-e-11-config.toml
-.aws_sam
-*~
-__pycache__
-venv
-*.sqlite
+**/build/
 *.bak
-.aws-sam
+*.db
+*.sqlite
+*client_secret*
 *secrets*
+*~
+.DS_Store
+.aws-sam
+.aws_sam
+.venv
+__pycache__
 coverage.xml
-build/
-**/*client_secret*
+csci-e-11-config.toml
