--- a/lab7/pyproject.toml
+++ b/lab7/pyproject.toml
@@ -1,18 +1,17 @@
 [project]
 name = "lab6"
 version = "1.0.0"
-description = "Lab 6 Circuit Python and ESP32 tools"
+description = "Lab 7 Circuit Python and ESP32 tools"
 authors = [
     {name = "Simson Garfinkel",email = "simsong@acm.org"}
 ]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "flask (>=3.1.1,<4.0.0)",
-    "gunicorn (>=23.0.0,<24.0.0)",
-    "tabulate (>=0.9.0,<0.10.0)",
-    "click (>=8.2.1,<9.0.0)",
-    "boto3 (>=1.40.11,<2.0.0)"
+             "circup",
+             "adafruit-ampy",
+             "pylint",
+             "adafruit-blinka"
 ]
 
 [tool.poetry]
