--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,7 +1,14 @@
 #
 # This is a Unix Makefile for Lab 2
+#
 # We use python to install djlint which is used to check the HTML files
-# THe variables LAB and PORT are set, but they aren't used.
+# The variables LAB and PORT are set, but they aren't used.
+#
+# This Makefile exists to check the HTML for correctness.
+# We expect that you will move the files as specified below:
+#
+# cp $HOME/spring26/lab2/public.html /var/www/html/
+# cp $HOME/spring26/lab2/confidential.html /var/www/html/confidential/
 
 
 export LAB=lab2
