added make distlcean to all

--- a/etc/e11-cli/Makefile
+++ b/etc/e11-cli/Makefile
@@ -27,3 +27,7 @@ clean:
 	rm -f .coverage coverage.xml
 	find . -name '__pycache__' -prune -exec rm -rf {} +
 	rm -rf build/ dist/
+
+distclean:
+	make clean
+	/bin/rm -rf .venv
