--- a/etc/e11-cli/Makefile
+++ b/etc/e11-cli/Makefile
@@ -6,22 +6,17 @@ PYTHON = python3.12
 
 .PHONY: install pytest lint clean check test
 
-install:
-	make .venv/pyvenv.cfg
-
 .venv/pyvenv.cfg: pyproject.toml Makefile
-	$(PYTHON) -m venv .venv
-	.venv/bin/pip install pip-tools
-	.venv/bin/pip install -e .
-	.venv/bin/pip install -e ".[dev]"
+	poetry config virtualenvs.in-project true
+	poetry install		# installs the current poetry.lock, do not update
 
 lint: .venv/pyvenv.cfg
-	.venv/bin/pylint e11/.
-	.venv/bin/pyright e11/.
+	poetry run pylint e11/.
+	poetry run pylint e11/.
 
 check: .venv/pyvenv.cfg
 	make lint
-	.venv/bin/pytest -q --cov=e11 --cov-report=term --cov-report=xml --junitxml=junit.xml -o junit_family=legacy tests/
+	poetry run pytest  -q --cov=e11 --cov-report=term --cov-report=xml --junitxml=junit.xml -o junit_family=legacy tests/
 
 clean:
 	rm -f .coverage coverage.xml
