--- a/etc/e11-cli/lambda-home/samconfig-stage.toml
+++ b/etc/e11-cli/lambda-home/samconfig-stage.toml
@@ -1,6 +1,7 @@
 version = 0.1
 [default.deploy.parameters]
 stack_name = "home-app-stage"
+EnvironmentName = "stage"
 resolve_s3 = true
 s3_prefix = "home-app-stage"
 region = "us-east-1"
