--- a/etc/e11-cli/lambda-home/samconfig.toml
+++ b/etc/e11-cli/lambda-home/samconfig.toml
@@ -1,6 +1,7 @@
 version = 0.1
 [default.deploy.parameters]
 stack_name = "home-app"
+EnvironmentName = "prod"
 region = "us-east-1"
 profile = "fas"
 resolve_s3 = true
