--- a/etc/e11-cli/lambda-home/template.yaml
+++ b/etc/e11-cli/lambda-home/template.yaml
@@ -1,27 +1,43 @@
 # HOW TO DEPLOY WITH SAM (creates samconfig.toml on first guided deploy):
-#   sam build -t template.yaml
-#   sam deploy -t template.yaml --guided --profile fas
-#     # Answer the prompts; you'll be asked for:
-#     #   - Stack Name (e.g., e11-home)
-#     #   - AWS Region (e.g., us-east-1)
-#     #   - Parameters: DynamoTableArn, HostedZoneId
-#     #   - (Optional) CertificateArn; leave blank to auto-create one in ACM
-#   # On next runs:
-#   make generate-templates && sam build && sam deploy
+#   sam build
+#   sam deploy --guided --profile fas
 #
-# Live:
-#   sam sync --stack-name e11-home --template template.yaml
-# Result:
-#   - An HTTP API at https://csci-e-11.org/
-#   - Routes handled by the Lambda handler in home.py (lambda_handler)
-#   - JSON API (POST) for grading; also supports ping/ping-mail actions
+# This template is parameterized for 'prod' and 'stage' environments.
+# The environment is controlled by the 'EnvironmentName' parameter,
+# which should be set in your samconfig.toml file.
+#
+# Example (samconfig-stage.toml):
+#   [default.deploy.parameters]
+#   stack_name = "home-app-stage"
+#   EnvironmentName = "stage"
+#   ...
+#
+# Example (samconfig.toml for prod):
+#   [default.deploy.parameters]
+#   stack_name = "home-app"
+#   EnvironmentName = "prod"
+#   ...
 
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: e11 home Lambda with custom domain (csci-e-11.org)
+Description: !FindInMap [EnvConfig, !Ref EnvironmentName, Description]
+
+Mappings:
+  EnvConfig:
+    prod:
+      DomainName: "csci-e-11.org"
+      StageName: "prod"
+      Description: "e11 home Lambda with custom domain (csci-e-11.org)"
+      CustomDomainUrl: "https://csci-e-11.org/"
+    stage:
+      DomainName: "stage.csci-e-11.org"
+      StageName: "stage"
+      Description: "e11 home Lambda staging environment (stage.csci-e-11.org)"
+      CustomDomainUrl: "https://stage.csci-e-11.org/"
 
 Globals:
   Function:
+    Architectures: [ arm64 ]
     Environment:
       Variables:
         LOG_LEVEL: !Ref LogLevel
@@ -32,22 +48,28 @@ Globals:
         PYTHONPATH: "/var/task/home_app/e11.whl"
 
 Parameters:
+  EnvironmentName:
+    Type: String
+    Default: stage
+    AllowedValues: [prod, stage]
+    Description: The deployment environment (prod or stage).
   UsersTableName:
     Type: String
-    Description: Name of existing DynamoDB table for grades/logs
-  OidcSecretId:
-    Type: String
-    Description: Secrets Manager SecretId/ARN containing the OIDC data
-  SshSecretId:
-    Type: String
-    Description: Secrets Manager SecretId/ARN containing the SSH data
+    Default: "e11-users"
+    Description: DynamoDB table name for users
   HostedZoneId:
     Type: String
-    Description: Route53 Hosted Zone ID for csci-e-11.org (e.g., Z123ABC...)
+    Description: Route53 Hosted Zone ID (e.g., Z0123456789ABCDEF)
   CertificateArn:
     Type: String
     Default: ""
-    Description: "(Optional) Existing ACM certificate ARN for csci-e-11.org. Leave blank to auto-create."
+    Description: (Optional) ACM Certificate ARN for the domain. Leave blank to auto-create.
+  OidcSecretId:
+    Type: String
+    Description: Secrets Manager ARN for OIDC secrets (github-oidc)
+  SshSecretId:
+    Type: String
+    Description: Secrets Manager ARN for SSH secrets (e11-ssh)
   LogLevel:
     Type: String
     Default: INFO
@@ -63,25 +85,26 @@ Resources:
     Type: AWS::CertificateManager::Certificate
     Condition: CreateAcmCert
     Properties:
-      DomainName: csci-e-11.org
+      DomainName: !FindInMap [EnvConfig, !Ref EnvironmentName, DomainName]
       ValidationMethod: DNS
       DomainValidationOptions:
-        - DomainName: csci-e-11.org
+        - DomainName: !FindInMap [EnvConfig, !Ref EnvironmentName, DomainName]
           HostedZoneId: !Ref HostedZoneId
 
-  # HTTP API fronting the Lambda, bound to csci-e-11.org in Route53
+  # HTTP API fronting the Lambda, bound to the domain in Route53
   HomeHttpApi:
     Type: AWS::Serverless::HttpApi
     Properties:
-      StageName: prod
+      StageName: !FindInMap [EnvConfig, !Ref EnvironmentName, StageName]
       CorsConfiguration:
         AllowOrigins: ['*']
         AllowMethods: ['GET','POST','OPTIONS']
       Domain:
-        DomainName: csci-e-11.org
+        DomainName: !FindInMap [EnvConfig, !Ref EnvironmentName, DomainName]
         CertificateArn: !If [CreateAcmCert, !Ref HomeCertificate, !Ref CertificateArn]
         Route53:
           HostedZoneId: !Ref HostedZoneId
+
   # Lambda function — JSON-only API (no Flask)
   E11HomeFunction:
     Type: AWS::Serverless::Function
@@ -195,14 +218,12 @@ Resources:
             ProjectionType: ALL
 
 Outputs:
-  # Production-specific outputs
   ApiId:
     Description: HTTP API ID
     Value: !Ref HomeHttpApi
   CustomDomainUrl:
     Description: Public base URL
-    Value: "https://csci-e-11.org/"
-  # Common outputs
+    Value: !FindInMap [EnvConfig, !Ref EnvironmentName, CustomDomainUrl]
   HomeFunction:
     Description: Home Lambda function name
     Value: !Ref E11HomeFunction
