--- a/etc/e11-cli/lambda-home/template.yaml
+++ b/etc/e11-cli/lambda-home/template.yaml
@@ -20,7 +20,7 @@
 
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: !FindInMap [EnvConfig, !Ref EnvironmentName, Description]
+Description: "e11 home Lambda (Unified Prod/Stage)"
 
 Mappings:
   EnvConfig:
